[package]
name = "onnx_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonformat = "2.0.0"
protobuf = "3.2.0"
protobuf-codegen = "3.2.0"
protobuf-json-mapping = "3.3.0"
protoc-bin-vendored = "3.0.0"
protoc-rust = "2.28.0"

[build-dependencies]
protoc-rust = "2.28.0"
protobuf = "3.2.0"
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"